gccida/g3/ix86_force_to_memory
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_force_to_memory/src/i386.c:12634:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  ix86_force_to_memory( machine_mode mode, rtx operand) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_force_to_memory/src/i386.c:12646:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_force_to_memory/src/i386.c:12662:31: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[2], v9); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_force_to_memory/src/i386.c:12699:33: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_e( PRE_DEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[2]); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_force_to_memory/src/i386.c:12705:33: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_fmt_e( PRE_DEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[2]); 
                                ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_force_to_memory/src/obj/i386.o] Error 1
